--- a/index.html
+++ b/index.html
@@ -5792,5 +5792,8 @@ document.addEventListener('DOMContentLoaded', bootstrap);
 /* expose */
 window.closeOverlay = closeOverlay;
 </script>
+<link rel="stylesheet" href="crypto-break.css">
+<script defer src="crypto-break.js"></script>
+
 </body>
 </html>
