--- a/index.html
+++ b/index.html
@@ -76,6 +76,12 @@
   background:linear-gradient(180deg,#111519,#0b0f12); color:#dfe8ef; font-weight:800; letter-spacing:.4px;
   box-shadow: 0 8px 30px rgba(0,0,0,.35), inset 0 1px 0 rgba(255,255,255,.06);
 }
+/* Quit button text color */
+.btn.danger,
+#cbQuit {
+  color: #fff !important;
+}
+
 .btn.ghost{ opacity:.95; }
 .btn.danger{ background: linear-gradient(180deg,#2e1413,#1a0c0b); }
 
