--- a/index.html
+++ b/index.html
@@ -16,10 +16,15 @@
   display: inline-flex; align-items: center; gap: 12px;
   padding: 10px 16px; border: 0; background: rgba(255,255,255,0.04);
   border-radius: 18px; cursor: pointer; position: relative; overflow: hidden;
-  box-shadow: 0 0 0px 0 rgba(255, 224, 72, 0.0);
+  /* subtle lit edge + depth */
+  box-shadow:
+    0 0 0 1px rgba(255,215,64,.22) inset,
+    0 8px 24px rgba(0,0,0,.35);
   transition: transform .15s ease, box-shadow .3s ease;
+  isolation: isolate;
 }
-/* soft golden edge glow */
+.crypto-btn img{ height: 38px; width: auto; display:block; }
+.crypto-btn span{ color:#d9d9d9; font-weight:800; letter-spacing:.2px; }/* soft golden edge glow */
 .crypto-btn::after{
   content:"";
   position:absolute;
@@ -2622,7 +2627,7 @@ window.openSnake = ()=>{ closeOverlay('playOverlay'); openOverlay('snakeModal');
             cue.y = world.bottom - (R.rBall*5.5);
           } else {
             b.alive = false;
-            score += 4;
+            score += 10;
             chadRun = score * 50;
             scoreEl.textContent = score;
             runChadEl.textContent = fmt(chadRun);
